--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,14 @@ android {
 
     namespace "net.micode.notes"
 
+    sourceSets{
+        main{
+            jniLibs.srcDirs=['libs']
+        }
+    }
+
+}
+
+dependencies {
+    implementation files('libs\\Msc.jar')
 }
